# skc-tools

./: .gitignore  CMakeLists.txt  Convert.c  Convert.h  Makefile.wat  MidiDLL.cpp  MidiDLL.hpp  MidiInterface.hpp  README.md  WinMsg.c  WinMsg.h  main.cpp  resource.h  resource.rc  skc2smf.c
.github/workflows/: cmake.yml  watcom.yml
